<!--Created by Gavin Mulvany x15448892 -->
<resources>
    <string name="app_name">Swords</string>

    //Activity Main
    <string name="Forum_Heading">Bus times</string>
    <string name="Forum_SubHeading">Check out bus times</string>
    <string name="Things_Heading">Things to Do</string>
    <string name="Things_SubHeading">Check out what Swords has to offer</string>
    <string name="Stats_Heading">Stats on Schools</string>
    <string name="Stats_SubHeading">Use our data to find out which school is best for you</string>
    <string name="Crime_Heading1">Stats on Crime</string>
    <string name="Crime_SubHeading1">View the crime figures for Swords</string>


    //Stats Sections
    <string name="Crime_Heading">Crime</string>
    <string name="Crime_SubHeading">View the number of crimes committed in Swords</string>
    <string name="Population_Heading">Population</string>
    <string name="Population_SubHeading">Check out how much Swords has grown</string>
    <string name="Schools_Heading">Schools</string>
    <string name="Schools_SubHeading">Find out key details about schools in the area</string>
    <string name="Construction_Heading">Construction</string>
    <string name="Construction_SubHeading">View whats getting built in Swords</string>

    //About Page
    <string name="Swords_Forum_Heading">Learn About Swords</string>
    <string name="Swords_Forum_SubHeading">This application was set up, not only for the residents of Swords but for the new and propestive residents in the future. The Swords App features provide a one-stop-shop for any resident to plan their next meal out in the town, or perhaps look up their bus times.
The Swords app also provides bespoke data that make for interesting reading for local residents or maybe prospective house buyers. Our data can allow for a prospective house buyer to view data about Swords in a concise and easy manner. Users of our app can few data about all the Schools in Swords, Such as the boy to girl ratios.
They can view the Crime data in Swords which will allow prospective house buyers or local residents to make descison is Swords a safe place to bring up a family. Users of the Swords App can also view data on the number of road accidents that have happened within Swords.
This data is pulled from an API with the data being pulled from a Government Data Portal known as data.gov.</string>
    <string name="LearnMore_Button">LEARN MORE</string>
    <string name="SignUp_Button">SIGN UP</string>
    <string name="Username">USERNAME</string>
    <string name="Password">PASSWORD</string>
    <string name="Login">LOGIN</string>
    <string name="About">About</string>
    <string name = "AboutSubHeading"> Learn what the app is about</string>

    //Dublin Bus Fragment
    <string name="DublinBus">THERE ARE NO DUBLIN BUS TIMETABLES AVAILABLE YET</string>

    //Swords Express Fragment
    <string name="SwordsExpress">SWORDS EXPRESS TIMETABLE IS NOT CURRENTLY AVAILABLE</string>

    //Things to do slide
    <string name="Activities">Activities</string>

    //Splash Screen
    <string name="Splash_Text">Swords - A Town away from Town</string>

    //Slider
    <string name="Title_here">TITLE HERE</string>
    <string name="Description_here">Description Here</string>

    //Slider adapter
    <string name="slide_Activities">Activities</string>
    <string name="title_activity_maps">Map</string>

    //bus times
    <string name="Bus_Number">Bus Number</string>
    <string name="due_in">is due in</string>
    <string name="minutes">minute(s)</string>
    <string name="BusButton">Check Times</string>
    <string name = "BusHint">Enter Bus Stop No</string>

    //crime stats
    <string name="Number_of_Murders_and_Assaults">Number of Murders and Assaults:</string>
    <string name="Attempts_Murder_Assult">Attempted Murders and Assaults:</string>
    <string name="r">Number of Robberies: </string>
    <string name="brg">Number of Burglaries:</string>
    <string name="theft">Number of thefts: </string>
    <string name="Fraud">Number of Fraud offences:</string>
    <string name="Drug_Offences">Number of Drug Offences:</string>
    <string name="Weapons">Number of Weapon crimes:</string>
    <string name="Damage_to_property">Damage to property offences:</string>
    <string name="Public_order">Number of Public order offences: </string>
    <string name="Offences_against_gov">Number of Offences against the Government:</string>
    <string name="crime_button">View Latest Crime Statistics</string>
    <string name="crime_header">Crime Statistics for Swords</string>

    //school stats
    <string name="SchoolName">School Name:</string>
    <string name="Address">Address:</string>
    <string name="SchoolLevel">School Level:</string>
    <string name="NumberOfMales">Number of Males:</string>
    <string name="NumberOfFemales">Number of Females:</string>
    <string name="SchoolTitle">School Statistics for Swords</string>
    <string name="school_button">View Latest School Statistics</string>

    //road accidents
    <string name="RoadHeading">Stats on Road Accidents</string>
    <string name="RoadSubheading">View latest data for Swords roads</string>
    <string name="roadButton">View Latest Road Accident Statistics</string>
    <string name="RoadTitle">Road Accident Statistics for Swords</string>
    <string name="Airport">Airport Road Accidents:</string>
    <string name="Glasmore"> Glasmore Road Accidents:</string>
    <string name="Lissenhall">Lissenhall Road Accidents:</string>
    <string name="Forrest">Forest Road Accidents:</string>
    <string name="Seatown">Seatown Road Accidents:</string>
    <string name="Village">Swords Village Road Accidents:</string>
    <string name="TheWard">The Ward Road Accidents:</string>












</resources>
