<?xml version="1.0" encoding="utf-8"?>
<!--parts taken from: https://www.youtube.com/watch?v=Rfqfn4IodqQ-->
<!--Created by Gavin Mulvany x15448892 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrimeStats"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Swords_Forum_Heading"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Swords_Forum_SubHeading"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@drawable/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LearnMore_Button" />

            <Button
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@drawable/buttonstylepink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUp_Button" />

        </LinearLayout>
        
        
    </LinearLayout>
    
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <EditText
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/Username"/>
        <EditText
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"/>
        <Button
            android:layout_marginTop="30dp"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button2"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:drawableRight="@drawable/ic_send_black_24dp"/>
    </LinearLayout>
</LinearLayout>